syntax = "proto3";

package trip;

option go_package = "shared/proto/trip;trip";

service TripService {
  rpc CreateTrip(CreateTripRequest) returns (CreateTripResponse);
}

message CreateTripRequest {
  Coordinate start_location = 1;
  Coordinate end_location = 2;
}

message Coordinate {
  float latitude = 1;
  float longitude = 2;
}

message Geometry {
  repeated Coordinate coordinates = 1;
}

message Route {
  repeated Geometry geometry = 1;
  float distance = 2;
  float duration = 3;
}

message CreateTripResponse {
  string trip_id = 1;
  Route route = 2;
}